fixing mobile overflow

--- a/main.css
+++ b/main.css
@@ -309,6 +309,10 @@ footer a:hover {
 
 
 @media (max-width: 990px) {
+  body * {
+    max-width: 100vw !important;
+  }
+
   header div.logos {
     float: center;
     height: 10vh;
